# fastapi_celery_study

./: .gitignore  CLAUDE.md  Dockerfile  README.md  claude.md  docker-compose.yml  logging_config.py  pyproject.toml  run.py
backend/: .dockerignore  .env.example  .env.example_prod  .envrc  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.cpu  Dockerfile.gpu  Dockerfile.llm  Dockerfile.ml-base  Dockerfile.ml-gpu-base  Dockerfile.ocr-cpu  Dockerfile.ocr-gpu  GEMINI.md  README.md  alembic.ini  celery_worker.py  docker-compose.domains.yml  docker-compose.yml  pyproject.toml  pyrightconfig.json  test_ollama.py
backend/.claude/: settings.local.json
backend/.claude/plan/: ocr-text-similarity.md
backend/app/: celery_app.py  config.py  main.py
backend/app/api/v1/: router.py
backend/app/api/v1/controllers/: model_controller.py  pipeline_controller.py  users_controller.py
backend/app/api/v1/crud/: __init__.py
backend/app/api/v1/services/: __init__.py  model_service.py  pipeline_service.py  redis_service.py
backend/app/core/: database.py  exceptions.py  logging.py  redis_client.py  router.py  supabase.py
backend/app/core/celery/: celery_config.py  celery_signals.py  celery_tasks.py  task_decorators.py
backend/app/core/handler/: celery_error_handler.py  exceptions_handler.py
backend/app/core/middleware/: __init__.py  request_middleware.py  response_middleware.py
backend/app/domains/: __init__.py
backend/app/domains/common/: __init__.py
backend/app/domains/common/controllers/: common_controller.py
backend/app/domains/common/services/: __init__.py  common_service.py
backend/app/domains/llm/: __init__.py
backend/app/domains/llm/controllers/: __init__.py  llm_controller.py
backend/app/domains/llm/models/: __init__.py
backend/app/domains/llm/schemas/: __init__.py  request.py  response.py
backend/app/domains/llm/services/: __init__.py  llm_model.py  llm_service.py
backend/app/domains/llm/tasks/: __init__.py  llm_tasks.py
backend/app/domains/ocr/: __init__.py
backend/app/domains/ocr/controllers/: __init__.py  comparison_controller.py  ocr_controller.py
backend/app/domains/ocr/schemas/: __init__.py  (+4 more)
backend/app/domains/pipeline/: __init__.py
backend/app/models/: __init__.py  chain_execution.py  ocr_execution.py  ocr_text_box.py  queue_stats.py  task_log.py  user.py  worker_status.py
backend/app/orchestration/: __init__.py
backend/app/orchestration/controllers/: __init__.py  pipeline_controller.py
backend/app/orchestration/pipelines/: __init__.py  ai_pipeline.py
backend/app/orchestration/schemas/: __init__.py  chain_execution.py  pipeline.py  stage.py  task_log.py
backend/app/orchestration/services/: __init__.py  pipeline_service.py
backend/app/orchestration/workflows/: __init__.py  workflow_builder.py
backend/app/repository/crud/: __init__.py
backend/app/schemas/: __init__.py  common.py  pipeline.py  response.py  stage.py
backend/app/shared/: __init__.py  base_model.py  base_service.py  redis_service.py
backend/app/shared/config/: pipeline_config.py
backend/app/utils/: file_utils.py  response_builder.py
backend/docs/: DEPENDENCY_GUIDE.md  DEVELOPMENT_SETUP.md  DOCKER_BASE_IMAGE_STRATEGY.md  MIGRATION_SUMMARY.md  QUICK_START.md  TASK_MONITORING_ARCHITECTURE.md  architecture-improvement.md  dependency-management.md  docker-gpu-troubleshooting.md  docker-portability.md  domain-setup-guide.md  domain_separation_architecture.md  grafana.md  migration-guide.md  model_server_migration_guide.md  orchestration-layer-guide.md  redis_data_structure.md  repository-pattern-guide.md  supabase_migration_summary.md
backend/http_tests/: README.md  basic-api.http  common-api.http  llm-api.http  model-api.http  ocr-api.http  pipeline-api.http
backend/infra/: docker-compose.yml
backend/infra/nginx/: README.md  nginx.conf
backend/migrations/: README.md  env.py  supabase_create_tables.sql
backend/migrations/versions/: 0707af2e8897_add_chain_execution_id_to_task_logs_.py
backend/model_servers/: __init__.py
backend/model_servers/ocr_server/: Dockerfile  __init__.py  ocr_model.py
backend/model_servers/ocr_server/engines/: __init__.py  base.py  easyocr_engine.py  factory.py
backend/model_servers/ocr_server/utils/: __init__.py
backend/scripts/: dev  flower  format  setup-dev.sh  stress  test  truncate_all_tables.py  worker
backend/tests/: conftest.py  test_stress_chain.py  test_supabase_integration.py
backend/tests/test_api/: test_main.py
backend/tests/test_core/: test_exceptions.py
backend/tests/test_domains/test_ocr/: __init__.py  test_similarity.py
backend/tests/test_sample/: concurrency.py  de-concurrency.py  test.py
backend/tests/test_utils/: test_response_builder.py
monorepo/: .dockerignore  .env.docker  .env.example  .gitignore  BATCH_PIPELINE_README.md  CLAUDE.md  Makefile  README.md  docker-compose.db.yml  docker-compose.yml  monorepo.code-workspace  pyproject.toml  pyrightconfig.json
monorepo/.serena/: project.yml
monorepo/claude-docs/: 모델_분석_결과.md  분석_완료_보고서.txt  최종_요약.md
monorepo/claudedocs/: grpc-generated-files-guide.md  grpc-migration-guide.md  grpc-setup-guide.md  pylance-fix-guide.md
monorepo/docs/: api_stability_improvement_plan.md  uv-workspace-setup.md
monorepo/docs/pipeline/: 00_overview.md  01_design_principles.md  02_architecture.md  03_components.md  04_db_tracking.md  05_error_handling.md  06_monitoring.md  07_testing.md  08_deployment.md  09_improvements.md  10_references.md  11_pipeline_orchestration.md  README.md
monorepo/http_test/grpc/: GRPC_TEST_README.md  grpc_commands.sh  grpc_test.postman_collection.json  grpc_test.py  start_ml_grpc.sh  test_grpc_server.py
monorepo/http_test/ml_server/: ocr.http
monorepo/migrations/: 001_add_batch_execution.sql  001_add_batch_execution_rollback.sql
monorepo/scripts/: clear_all.py  setup_all_packages.sh
torch_serve_dev/: claude.md  handler.py  key_file.json  main.py  model.py  pyproject.toml  resnet.py
torch_serve_dev/.claude/: settings.local.json
torch_serve_dev/claudedocs/: image_handler_example.md  torchserve_model_archive.md
(+351 files in other folders)
