[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# 워크스페이스 관리
[tool.uv.workspace]
members = ["packages/*"]

# 워크스페이스 내부 패키지 소스 지정
[tool.uv.sources]
shared = { workspace = true }

# ===== Code Quality Tools =====
[tool.ruff]
line-length = 88
target-version = "py312"
exclude = [".git", ".venv", ".mypy_cache", ".pytest_cache", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pyright]
typeCheckingMode = "basic"
pythonVersion = "3.12"
include = ["packages/*"]
exclude = [".git", ".venv", ".pytest_cache", "__pycache__"]

[tool.pytest.ini_options]
testpaths = ["packages"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["--strict-markers", "--verbose"]