[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# 워크스페이스 관리
[tool.uv.workspace]
members = ["packages/*"]

# 워크스페이스 내부 패키지 소스 지정
[tool.uv.sources]
shared = { workspace = true }

# ===== Code Quality Tools =====
[tool.ruff]
line-length = 88
target-version = "py312"
exclude = [
    ".git",
    ".venv",
    ".mypy_cache",
    ".pytest_cache",
    "__pycache__",
    # "**/grpc/generated/**",  # gRPC 생성 파일 제외
]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.ruff.lint.per-file-ignores]
# gRPC 생성 파일은 모든 룰 무시
"**/grpc/generated/*" = ["E", "F", "I", "N", "W"]

# Pyright 설정은 제거됨 - VSCode에서는 Pylance 사용

[tool.pytest.ini_options]
testpaths = ["packages"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["--strict-markers", "--verbose"]

[dependency-groups]
dev = [
    "ruff>=0.14.0",
]
