[project]
name = "torch_serve_dev"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "torch>=2.9.0",
    "torch-model-archiver>=0.12.0",
    "torch-workflow-archiver>=0.2.15",
    "torchserve>=0.12.0",
    "torchvision>=0.24.0",
]
